fix: remove dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,12 +6,6 @@
   --foreground-rgb: 0, 0, 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-  }
-}
-
 body {
   min-height: 100vh;
   color: rgb(var(--foreground-rgb));
